# kollider-api-client-rs

./: Cargo.toml  README.md
.github/: test-integration.yml
src/: client.rs  error.rs  main.rs  model.rs
tests/: kollider-client.rs
