[package]
name = "kollider-api-client-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
data-encoding = "2.3.3"
json = "0.12.4"
reqwest = { version = "0.11.14", features = ["json"] }
ring = "0.16.20"
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
